--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 clap = "~2.27.0"
 surf = "~2.2"
-# json = "~0.12.4"
 serde_json = "1.0"
 futures = "~0.3.13"
+
+[dependencies.rusqlite]
+version = "0.25.0"
+features = ["bundled"]
