--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "convert_kindle_vocab_to_anki"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["MrShiister <MrShiister@users.noreply.github.com>"]
 edition = "2018"
 
@@ -9,9 +9,9 @@ edition = "2018"
 [dependencies]
 clap = "~2.27.0"
 surf = "~2.2"
-serde_json = "1.0"
+serde_json = "~1.0"
 futures = "~0.3.13"
 
 [dependencies.rusqlite]
-version = "0.25.0"
+version = "~0.25.0"
 features = ["bundled"]
